--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "groq-sdk": "^0.37.0",
     "lucide-react": "^0.562.0",
+    "markdown-to-jsx": "^9.5.7",
     "next": "16.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3"
